<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryAlt1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserInterface.UserNameActivity">

    <ImageView
        android:id="@+id/imageViewUserName"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/userNameHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="GITHUB ISSUE TRACKER"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewEnterNameUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kindly enter a github Username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextGithubUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="Github Username"
        android:inputType="textPersonName"
        android:padding="14dp" />

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ADC8DF"
        android:elevation="100dp"
        android:text="search"
        app:cornerRadius="40dp" />

</LinearLayout>