...
            android:layout_height="wrap_content"
            android:layout_marginStart="10.5dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kelly Egesa"
                android:textColor="@color/textHeader"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewBio"
                android:layout_width="match_parent"
...
